--- a/src/style/base.css
+++ b/src/style/base.css
@@ -6,6 +6,9 @@
 
 html {
     font-family: 'Kantumruy Pro', sans-serif;
+    color: var(--light);
+    font-size: 62.5%;
+    background: url('../../asset/img/Content/bg-app.jpg') top left / cover no-repeat;
 }
 
 /* ===== Reset CSS ===== */
@@ -29,14 +32,15 @@ h4, h5, h6 {
 input, button {
     outline: none;
     border: none;
+    font-family: 'Kantumruy Pro', sans-serif;
 }
 
 /* ===== Color palette ===== */
 :root {
     --dark: #14121E;
-    --teal: #3CA6B9;
+    --light: #FFFFFF;
+    --coral: #F75150;
     --golden: #FFAB48;
-    --light-bg-1: #F1F3F4;
-    --light-component: #FFFFFF;
-    --gradient-bg: linear-gradient(#FEECDE, #E9D7FF);
+    --light-bg: #ffffffbc;
+    --gradient-bg: linear-gradient(#FEECDE, #dbc1fa);
 }
