--- a/src/style/base.css
+++ b/src/style/base.css
@@ -29,6 +29,10 @@ h4, h5, h6 {
     padding: 0;
 }
 
+table {
+    border-collapse: collapse;
+}
+
 input, button {
     outline: none;
     border: none;
@@ -41,6 +45,6 @@ input, button {
     --light: #FFFFFF;
     --coral: #F75150;
     --golden: #FFAB48;
-    --light-bg: #ffffffbc;
+    --light-bg: #ffffff36;
     --gradient-bg: linear-gradient(#FEECDE, #dbc1fa);
 }
