--- a/src/style/main.css
+++ b/src/style/main.css
@@ -50,11 +50,11 @@
 }
 
 .nav-list-title {
+    color: var(--coral);
     font-size: 1.8rem;
     font-weight: 600;
     margin-top: 40px;
     margin-bottom: 20px;
-    opacity: .7;
 }
 
 .nav-list-main_item {
@@ -64,12 +64,16 @@
     opacity: .7;
 }
 
-.nav-list-main_item > i {
+.nav-list-main_item > a {
+    color: var(--light);
+}
+
+.nav-list-main_item > a > i {
     margin-right: 10px;
     flex: 1;
 }
 
-.nav-list-main_item > span {
+.nav-list-main_item > a > span {
     flex: 7;
 }
 
@@ -77,10 +81,6 @@
     font-weight: 500;
     opacity: 1;
 }
-
-.app-main {}
-
-.app-on-use {}
 
 .app-on-use_banner {
     background: url('../../asset/img/svg/bg-2.svg') top left / cover no-repeat;
@@ -157,8 +157,10 @@
     opacity: .8;
 }
 
-.popular-chart {
-
+.popular-content {
+    width: 100%;
+    height: 330px;
+    overflow-y: scroll;
 }
 
 th, td {
@@ -168,11 +170,15 @@ th, td {
 }
 
 tr {
-    border-bottom: solid 1px rgba(255, 255, 255, 0.4);
+    border-top: solid 1px rgba(255, 255, 255, 0.4);
+}
+
+tr:first-child {
+    border-top: none;
 }
 
 td {
-    height: 65px;
+    height: 60px;
 }
 
 th:nth-child(2), .popular-chart_title {
@@ -202,7 +208,7 @@ th:nth-child(2), .popular-chart_title {
 }
 
 .app-user-info {
-    margin-right: 57px;
+    margin-right: 55px;
     cursor: pointer;
 }
 
@@ -227,7 +233,6 @@ th:nth-child(2), .popular-chart_title {
 .app-user-noti {
     padding: 10px 12px;
     border-radius: 50%;
-    opacity: .7;
 }
 
 .app-user-noti:hover {
@@ -251,8 +256,89 @@ th:nth-child(2), .popular-chart_title {
 
 .app-recent-playlist {}
 
-.popular-chart_title {}
+.app-player {
+    background-color: #14121ea2;
+    margin-top: 30px;
+    padding: 20px;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
-.popular-chart_time {}
+.app-player > img {
+    border-radius: 20px;
+}
 
-.app-player {}
+.app-player > a {
+    color: var(--light);
+    font-weight: 500;
+    margin-top: 10px;
+    font-size: 1.4rem;
+}
+
+.app-player > p {
+    margin-top: 4px;
+    font-size: 1.2rem;
+    color: var(--light);
+    opacity: .7;
+}
+
+.app-player-song-img {
+    width: 230px;
+    height: 150px;
+    margin-top: 5px;
+    background: url("../../asset/img/Content/1591.jpg") center / cover no-repeat;
+    border-radius: 15px;
+}
+
+.time-progress {
+    margin-top: 10px;
+}
+
+.amplitude-song-slider {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 220px;
+    height: 4px;
+    background: #fff;
+    /* opacity: .7; */
+    outline: none;
+    -webkit-transition: .2s;
+    transition: .2s;
+}
+
+.amplitude-song-slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 20px;
+    height: 15px;
+    background: url("../../asset/img/svg/cloud-solid.svg") center / cover no-repeat;
+    cursor: pointer;
+    opacity: 1;
+}
+
+.app-player-timeline {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 15px;
+    cursor: pointer;
+}
+
+.app-player-timeline > i:nth-child(odd) {
+    padding: 7px 11px;
+    font-size: 2.5rem;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.app-player-timeline > i:nth-child(even) {
+    padding: 7px;
+    font-size: 2.5rem;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.app-player-timeline > i:hover {
+    background-color: var(--light-bg);
+}
